# DesignPatternsFinalProject

./: .gitignore  AIntervention_8h.html  AIntervention_8h.js  AIntervention_8h__dep__incl.map  AIntervention_8h__dep__incl.md5  AIntervention_8h__incl.map  AIntervention_8h__incl.md5  AIntervention_8h_source.html  ATechnicianObserver_8h.html  ATechnicianObserver_8h.js  ATechnicianObserver_8h__dep__incl.map  ATechnicianObserver_8h__dep__incl.md5  ATechnicianObserver_8h_source.html  ATechnician_8h.html  ATechnician_8h.js  ATechnician_8h__dep__incl.map  ATechnician_8h__dep__incl.md5  ATechnician_8h__incl.map  ATechnician_8h__incl.md5  ATechnician_8h_source.html  BasicTechnician_8cpp.html  BasicTechnician_8cpp__incl.map  BasicTechnician_8cpp__incl.md5  BasicTechnician_8cpp_source.html  BasicTechnician_8h.html  BasicTechnician_8h.js  BasicTechnician_8h__dep__incl.map  BasicTechnician_8h__dep__incl.md5  BasicTechnician_8h__incl.map  BasicTechnician_8h__incl.md5  BasicTechnician_8h_source.html  CMakeLists.txt  ConcreteIntervention_8cpp.html  ConcreteIntervention_8cpp__incl.map  ConcreteIntervention_8cpp__incl.md5  ConcreteIntervention_8cpp_source.html  ConcreteIntervention_8h.html  ConcreteIntervention_8h.js  ConcreteIntervention_8h__dep__incl.map  ConcreteIntervention_8h__dep__incl.md5  (+1009 more)
.dist/: main
.github/workflows/: doxygen.yml
include/TechMa/Authentication/: UserAuthentication.h
include/TechMa/Entities/: AIntervention.h  ATechnician.h  ConcreteIntervention.h  InterventionData.h  Location.h
include/TechMa/Facade/: InterventionCreatorFacade.h
include/TechMa/Factory/: InterventionFactory.h
include/TechMa/Observer/: ATechnicianObserver.h
include/TechMa/Repository/: InterventionRepository.h  InterventionRepositoryProxy.h  TechnicianRepository.h  TechnicianRepositoryProxy.h
include/TechMa/Technician/: BasicTechnician.h  ExpertiseDecorator.h  TechnicianDecorator.h
include/TechMa/Types/: ExpertiseField.h  InterventionAddon.h  InterventionComplexity.h  InterventionStatus.h  InterventionType.h
include/TechMa/Views/: TechMapp.h
include/interventions/: Intervention.hpp  Maintenance.hpp  Maintenannce.hpp  Urgence.hpp
include/patterns/: ConsoleNotifier.hpp  GestionnaireInterventions.hpp  GestionnaireProxy.hpp  IObserver.hpp  InterventionFactory.hpp  Observable.hpp  PiecesJointesdecorator.hpp  SuiviGPSDecorator.hpp  UrgenceFactory.hpp
include/patterns/decorator/: InterventionDecorator.hpp
include/patterns/factory/: InterventionFactory.hpp  MaintenanceFactory.hpp  UrgenceFactory.hpp
include/roles/: Role.hpp
include/utilisateur/: Utilisateur.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+49 more)
src/: main.cpp
src/Authentication/: UserAuthentication.cpp
src/Facade/: InterventionCreatorFacade.cpp
src/Factory/: InterventionFactory.cpp
src/Interventions/: ConcreteIntervention.cpp
src/Repository/: InterventionRepository.cpp  InterventionRepositoryProxy.cpp  TechnicianRepository.cpp  TechnicianRepositoryProxy.cpp
src/Technician/: BasicTechnician.cpp  ExpertiseDecorator.cpp  TechicianDecorator.cpp  Technician.cpp  TechnicianDecorator.cpp
src/Views/: TechMapp.cpp
src/Views/Controllers/: TechListController.cpp
src/Views/Pages/: InterventionPage.cpp  LoginPage.cpp  ParametersPage.cpp  TechniciansPage.cpp
src/Views/Widgets/: CreateInterventionDialog.cpp  CreateTechnicianDialog.cpp  EntityEditorLayout.cpp  InterventionEditPanel.cpp  InterventionsListView.cpp  NavigationBar.cpp  TechnicianEditPanel.cpp  TechniciansListView.cpp
src/output/: main
styles/: style.qss
styles/fonts/: RobotoMono.ttf:Zone.Identifier
(+17 files in other folders)
